index.css
* {
    box-sizing: border-box;
}

:root, body {
    margin: 0;
    padding: 0;
    background-color: black;
}

[data-slider-viewport] {
}

[data-slide-wrapper] {
    --slide-number: 1;
    --dim-opacity: 0;
    position: absolute;
    top: 0;

}

[data-slide-content] {
    position: -webkit-sticky;
    position: sticky;
    top: 0;
    min-height: 100vh;
    max-height: 100vh;
    height: 100vh;
    width: 100vw;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-color: white;
}

[data-slide-content]:before {
    content: '';
    position: absolute;
    width: 100%;
    height: 100%;
    background-color: black;
    pointer-events: none;
    opacity: var(--dim-opacity);
}

[data-slide-wrapper]:first-child:before {
    opacity: 0;
}

[data-slide-wrapper]:last-child {
    position: initial;
    top: initial;
}

[data-slide-wrapper] {
    height: calc(var(--slide-number) * 100vh);
}

[data-slide-content] {
    z-index: calc(1000 + (var(--slide-number) * -1));
}


[data-slide-wrapper]:target {

}

[data-slide-wrapper]:target + [data-slide-wrapper] [data-slide-content] {
    background-image: none;
    background-color: white;
}

[data-slide-caption-animation] {
    opacity: .1;
    transition: opacity .2s;
}

.active [data-slide-caption-animation] {
    opacity: .1;
    animation: caption-enter-animation 5s 1;
}

[data-slide-caption-animation]:hover {
    opacity: 1;
}

@keyframes caption-enter-animation {
    from {
        opacity: .1;
    }
    10%, 90% {
        opacity: 1;
    }
    to {
        opacity: .1;
    }
}


/* DEMO */


[data-slide-content] {
    color: white;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    text-align: center;
}

[data-slide-content] h1 {
    font-family: sans-serif;
    font-size: 4em;
}

[data-slide-content] p {
    font-family: sans-serif;
    font-size: 2em;
}

